--- a/assets/syntax-highlighter/styles/shThemeDefault.css
+++ b/assets/syntax-highlighter/styles/shThemeDefault.css
@@ -15,23 +15,23 @@
  * Dual licensed under the MIT and GPL licenses.
  */
 .syntaxhighlighter {
-  background-color: white !important;
+  background-color: var(--bs-light-bg-subtle-2) !important;
   max-height:450px;
 }
 .syntaxhighlighter .line.alt1 {
-  background-color: white !important;
+  background-color: var(--bs-light-bg-subtle-2) !important;
 }
 .syntaxhighlighter .line.alt2 {
-  background-color: white !important;
+  background-color: var(--bs-light-bg-subtle-2) !important;
 }
 .syntaxhighlighter .line.highlighted.alt1, .syntaxhighlighter .line.highlighted.alt2 {
-  background-color: #e0e0e0 !important;
+  background-color: var(--bs-light-bg-subtle-2) !important;
 }
 .syntaxhighlighter .line.highlighted.number {
-  color: black !important;
+  /* color: black !important; */
 }
 .syntaxhighlighter table caption {
-  color: black !important;
+  /* color: black !important; */
 }
 .syntaxhighlighter .gutter {
   color: #afafaf !important;
@@ -72,7 +72,7 @@
   color: black !important;
 }
 .syntaxhighlighter .plain, .syntaxhighlighter .plain a {
-  color: black !important;
+  /* color: black !important; */
 }
 .syntaxhighlighter .comments, .syntaxhighlighter .comments a {
   color: #008200 !important;
@@ -112,7 +112,6 @@
 .syntaxhighlighter .color3, .syntaxhighlighter .color3 a {
   color: red !important;
 }
-
 .syntaxhighlighter .keyword {
   font-weight: bold !important;
 }
